# inverse_kinematics

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: Camera.hpp  Geometry.hpp  IKChain.hpp  Renderer.hpp  Scene.hpp  Shader.hpp
shaders/: fragment.glsl
src/: Camera.cpp  Geometry.cpp  IKChain.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  main.cpp
